# My-Safety-App

./: .env.example  .gitignore  CREDENTIALS.txt  LICENSE  README.md  auth.py  db.py  hi2.py  main.py  main_admin.py  models.py  pyproject.toml  render.yaml  report.md  requirements.txt
.puku/: puku-embeddings.db-shm  puku-embeddings.db-wal
app/: __init__.py  admin_main.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  engine.py
app/schemas/: __init__.py  auth.py  chat.py  crime.py  emergency.py  missing.py  wanted.py
migrations/: 000_base_schema.sql  001_add_crime_fields.sql  002_missing_tables.sql  003_add_columns.sql  004_indexes.sql  005_admin_tables.sql
screenshots/: per_role_report.json
scripts/: README.md  apply_migration.py  browser_smoke.py  e2e_smoke.py  per_role_browser_test.py  run_migration_and_db_test.py  test_post_crime.py
scripts/db/: create_role_credentials.py  run_migration_and_db_test.py  test_db.py
scripts/e2e/: e2e_chat.py
static/: admin_dashboard.html  admin_dashboard21.html  home.html  index.html  login.html  missing_person copy.html  missing_person.html  report_crime.html  report_missing_person.html  signup.html  user_chatbox.html  wanted_criminal.html
static/templates/: admin_dashboard.html  admin_dashboard21.html  home.html  login.html  report_crime.html  (+3 more)
tests/: conftest.py  test_api_auth_gating.py  test_auth.py  test_auth_dependencies.py  test_db_helpers.py  test_migration_runner.py  test_migrations.py  test_shared_assets.py  test_subapp_routing.py
todo/: tasks.md
(+11 files in other folders)
