[project]
name = "my-safety-app"
version = "1.0.0"
description = "FastAPI citizen-safety app for Dhaka Metropolitan, Bangladesh — crime reporting, missing persons, wanted criminals, chat with station, admin dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pymysql",
    "pydantic",
    "pyjwt",
    "passlib[bcrypt]",
    "bcrypt",
    "python-multipart",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "playwright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
